@@ -5,6 +5,7 @@
   * improved functionality to update repo descriptions 
     and manage dependencies on other shared repositories
   * fixed a few tiny bugs
+  * added support to create an entry from a given directory (importing directories)
 
 # V1.2.0605, 2015-06-05 -- stable release
   (several extra features to improve autotuning)
